<resources>
    <string name="app_name">Berita</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Alhamdulillah..\nAplikasi dikembangkan oleh : Nahl Munif Basalamah\nGitHub : github.com/nahlmb</string>
    <string name="berita_info_intro">Berita. is simple news app, Alhamdulillah. I hope, with this, Gits Indonesia accept my internship request</string>
    <string name="logo">logo</string>
    <string name="garis">garis</string>
    <string name="your_name_please">Your Name Please</string>
    <string name="where_do_you_life">Where do You life?</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="berita_name">Berita</string>
    <string name="example_hello_user">Hello!\nFulan bin Al Fulan</string>
    <string name="example_date">Monday\n12 January 2019</string>
    <string name="good_news_and_share">read a good news and share a good things</string>
    <string name="read_news_by_category">read News by category :</string>
    <string name="science">science</string>
    <string name="technology">technology</string>
    <string name="sport">sport</string>
    <string name="more_news">more</string>
    <string name="country_example_top_headline">indonesia Technology Headline</string>
    <string name="category_example_top_headline">Technology Top Headline</string>
    <string name="topic_do_you_like">Tell Us\nWhat TOPIC\nDo You LIKES..</string>
    <string name="example_news_about_topic_likes">News about technology</string>
    <string name="feed_setting">feed setting</string>
    <string name="example_news_preview_text_2">Super Mario Maker 2\'s online mode will get a “friends” patch after launch [Updated] - Ars Technica</string>
    <string name="example_news_preview_text_1">Studi menunjukkan peningkatan jumlah penyakit yang berhubungan dengan pekerjaan</string>
    <string name="read_more">Read More..</string>
    <string name="example_news_tittle_one">10 Danger things for health</string>
    <string name="example_news_title_two">Google fixes Android Q beta bootloop issue, resumes updates - The Verge</string>
    <string name="example_news_containt">Photo by Vjeran Pavic / The Verger Google has re-released Android Qs fourth beta after fixing an issue that caused some Pixel devices to bootloop, meaning they were trapped in a constant reset state. The issue arose after some Pixel users tried to install the…</string>

    <string-array name="country">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Checz Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Rusia</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>UAE</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venuzuela</item>
    </string-array>

    <string-array name="countryId">
        <item>ar</item>
        <item>au</item>
        <item>at</item>
        <item>be</item>
        <item>br</item>
        <item>bg</item>
        <item>ca</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>eg</item>
        <item>fr</item>
        <item>de</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>in</item>
        <item>id</item>
        <item>ie</item>
        <item>it</item>
        <item>jp</item>
        <item>lv</item>
        <item>lt</item>
        <item>my</item>
        <item>mx</item>
        <item>ma</item>
        <item>nl</item>
        <item>nz</item>
        <item>ng</item>
        <item>no</item>
        <item>ph</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sa</item>
        <item>rs</item>
        <item>sg</item>
        <item>sk</item>
        <item>si</item>
        <item>za</item>
        <item>kr</item>
        <item>se</item>
        <item>ch</item>
        <item>tw</item>
        <item>th</item>
        <item>tr</item>
        <item>ae</item>
        <item>ua</item>
        <item>gb</item>
        <item>us</item>
        <item>ve</item>
    </string-array>

    <string-array name="category">
        <item>science</item>
        <item>sport</item>
        <item>technology</item>
    </string-array>

</resources>
