<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro.IntroActivity"
    android:background="@color/white">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logoberita"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berita_info_intro"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_slab"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name_please"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="18dp"/>

        <EditText
            android:id="@+id/edt_nama_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/name"
            android:fontFamily="@font/roboto_slab"
            android:layout_marginTop="18dp"
            android:maxLength="14"
            android:inputType="textPersonName"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/garis"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="max 14 char"
            android:textSize="8sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_slab"
            android:layout_marginTop="4dp"/>

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_do_you_life"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="32dp"/>

        <Spinner
            android:id="@+id/spinner_negara_user"
            android:layout_width="match_parent"
            android:layout_marginTop="18sp"
            android:layout_height="36dp"
            android:entries="@array/country"
            ></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What kind of news do you like?"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="36dp"/>

        <Spinner
            android:id="@+id/spinner_favorit_category"
            android:layout_width="match_parent"
            android:layout_marginTop="18sp"
            android:layout_height="36dp"
            android:entries="@array/category"
            ></Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_from_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/shape_hitam_radius_5"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_slab_bold"
        android:textSize="14sp"
        android:text="@string/next"/>



</android.support.constraint.ConstraintLayout>