<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">
            
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/black"
                android:layout_marginTop="168dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                app:cardCornerRadius="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/helloUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_hello_user"
                            android:fontFamily="@font/roboto_slab"
                            android:textSize="22dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="have a good day!"
                            android:textColor="#fff"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:layout_marginTop="8dp"
                            />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/example_date"
                        android:textColor="@color/white"
                        android:textAlignment="viewEnd"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textSize="14sp"/>

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good_news_and_share"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:textColor="@color/black"
                    android:padding="18dp"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="42dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_news_by_category"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/black"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="18sp"/>
                
                <LinearLayout
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    
                    <TextView
                        android:id="@+id/txt_science"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/science"
                        android:textColor="@color/white"
                        android:background="@color/abu_tua_banget"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="4dp"
                        android:fontFamily="@font/roboto_slab"/>

                    <TextView
                        android:id="@+id/txt_tech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/technology"
                        android:textColor="@color/white"
                        android:background="@color/abu_tua_banget"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="4dp"
                        android:fontFamily="@font/roboto_slab"/>

                    <TextView
                        android:id="@+id/txt_sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/sport"
                        android:textColor="@color/white"
                        android:background="@color/abu_tua_banget"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="4dp"
                        android:fontFamily="@font/roboto_slab"/>
                    
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingBottom="24dp"
                android:layout_marginTop="48dp">

                <android.support.constraint.ConstraintLayout
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_example_top_headline"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textColor="@color/black"/>

                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_news"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textColor="@color/black"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_country_headlines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager">

                </android.support.v7.widget.RecyclerView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingBottom="24dp">

                <android.support.constraint.ConstraintLayout
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_example_top_headline"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textColor="@color/black"/>

                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_news"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textColor="@color/black"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_category_headlines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_tell_us_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="42dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_do_you_like"
                        android:textSize="24sp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/edt_tell_us_topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="ex : technology"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_slab"
                        android:textColor="@color/black"
                        android:inputType="textShortMessage"
                        android:maxLines="1"
                        android:maxLength="20"
                        android:background="@color/white"
                        android:textSize="18sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"/>

                    <Button
                        android:id="@+id/btn_tell_us_topic"
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="submit"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:background="@drawable/shape_abutua_radius_5"/>
                    
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/crd_fav_topic_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp"
                        android:paddingTop="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_news_about_topic"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/example_news_about_topic_likes"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>

                        <ImageView
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_more_vert_black_24dp"/>

                    </android.support.constraint.ConstraintLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_fav_topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp">

                    </android.support.v7.widget.RecyclerView>


                </LinearLayout>




            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_feed_setting"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_abutua_radius_5"
                android:textColor="@color/white"
                android:text="@string/feed_setting"
                android:fontFamily="@font/roboto_slab_bold"
                />
            
            
        </LinearLayout>
        
    </android.support.constraint.ConstraintLayout>

    



</android.support.v4.widget.NestedScrollView>