<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="248dp"
        app:cardCornerRadius="5dp"
        >

        <ImageView
            android:id="@+id/img_news1_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/example_news"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/black_51_transparant"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_news1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_news_tittle_one"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_slab_bold"/>

                <TextView
                    android:id="@+id/txt_news1_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_news_preview_text_1"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingRight="24dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="18dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:paddingBottom="18dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_slab"
                    android:background="@drawable/shape_putih_radius__atas_5"/>

                <TextView
                    android:id="@+id/txt_read_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_slab"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:text="@string/read_more"
                    />



            </LinearLayout>

        </android.support.constraint.ConstraintLayout>





    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>